--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=48A253BD47AE48EF727EAB98E007B7A2
-ProjectName=Third Person Game Template
+ProjectName=PlaystageDemo4
+CompanyName=Biznet It
+Homepage="\"http://www.biznet.cl\""
+CopyrightNotice=Copyright 2023 Biznet It
 
 [StartupActions]
 bAddPacks=True
