--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 GlobalDefaultGameMode="/Script/PlaystageDemo4.PlaystageDemo4GameMode"
+GameInstanceClass=/Game/00_Actors/Replay/PSD4_GameInstance.PSD4_GameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
