Replay Game Instance 6 - Playback con menu funcional
GameCrash al apretar play y pausa

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,9 @@ EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 GlobalDefaultGameMode="/Script/PlaystageDemo4.PlaystageDemo4GameMode"
 GameInstanceClass=/Game/00_Actors/Replay/PSD4_GameInstance.PSD4_GameInstance_C
 
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="DemoNetDriver",DriverClassName="/Script/Engine.DemoNetDriver",DriverClassNameFallback="/Script/Engine.DemoNetDriver")
+
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
 r.Mobile.SupportGPUScene=False
