Actulizacion config files proyecto

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/StackOBot/UI/MainMenu/MainMenu2_WP.MainMenu2_WP
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 GlobalDefaultGameMode="/Script/PlaystageDemo4.PlaystageDemo4GameMode"
 GameInstanceClass=/Game/00_Actors/Replay/PSD4_GameInstance.PSD4_GameInstance_C
