--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,8 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+Content/04_Characters/05_BernardoOhiggins/BernardoOhiggins.uasset
+Content/04_Characters/10_MasGriego/MasGriego.uasset
+Content/04_Characters/13_Turista/Turista.uasset
+Content/04_Characters/16_Pitagoras/Pitagoras.uasset
+Content/04_Characters/20_SoldadoPatriota/SoldadoPatriota.uasset
