--- a/PlaystageDemo4.uproject
+++ b/PlaystageDemo4.uproject
@@ -30,6 +30,10 @@
 			"Name": "RLPlugin",
 			"Enabled": true
 		},
-		
+		{
+			"Name": "EasyMultiSave",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/7232621c23174bbbbb64c7bfb6583f6f"
+		}
 	]
 }
