activacion plugins para metahuman y groom

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/StackOBot/UI/MainMenu/MainMenu2_WP.MainMenu2_WP
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/PlaystageDemo4.PlaystageDemo4GameMode"
+GlobalDefaultGameMode=/Script/PlaystageDemo4.PlaystageDemo4GameMode
 GameInstanceClass=/Game/00_Actors/Replay/PSD4_GameInstance.PSD4_GameInstance_C
 
 [/Script/Engine.GameEngine]
@@ -119,9 +119,9 @@ r.Substrate.Debug.AdvancedVisualizationShaders=False
 r.Material.RoughDiffuse=False
 r.Material.EnergyConservation=False
 r.OIT.SortedPixels=False
-r.SkinCache.CompileShaders=False
+r.SkinCache.CompileShaders=True
 r.SkinCache.SkipCompilingGPUSkinVF=False
-r.SkinCache.DefaultBehavior=1
+r.SkinCache.DefaultBehavior=0
 r.SkinCache.SceneMemoryLimitInMB=128.000000
 r.Mobile.EnableStaticAndCSMShadowReceivers=True
 r.Mobile.EnableMovableLightCSMShaderCulling=True
@@ -131,12 +131,12 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=True
 r.Mobile.AllowDistanceFieldShadows=True
 r.Mobile.AllowMovableDirectionalLights=True
 r.Mobile.EnableMovableSpotlightsShadow=False
-r.GPUSkin.Support16BitBoneIndex=False
+r.GPUSkin.Support16BitBoneIndex=True
 r.GPUSkin.Limit2BoneInfluences=False
 r.SupportDepthOnlyIndexBuffers=True
 r.SupportReversedIndexBuffers=True
 r.Mobile.AmbientOcclusion=False
-r.GPUSkin.UnlimitedBoneInfluences=False
+r.GPUSkin.UnlimitedBoneInfluences=True
 r.GPUSkin.UnlimitedBoneInfluencesThreshold=8
 DefaultBoneInfluenceLimit=(Default=0,PerPlatform=())
 MaxSkinBones=(Default=65536,PerPlatform=(("Mobile", 256)))
@@ -147,6 +147,7 @@ bDiscardSkeletalMeshOptionalLODs=(Default=False,PerPlatform=())
 VisualizeCalibrationColorMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationColor.PPM_DefaultCalibrationColor
 VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationGrayscale.PPM_DefaultCalibrationGrayscale
+SkeletalMesh.UseExperimentalChunking=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -202,4 +203,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[ConsoleVariables]
+fx.Niagara.ForceLastTickGroup=1
 
